--- a/css/blog.css
+++ b/css/blog.css
@@ -1,5 +1,5 @@
 .body {
-    background: gray;
+    background: gra;
 }
 
 .navbar {
@@ -28,7 +28,7 @@
 .navbar ul li a {
     text-decoration: none;
     color: black;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
 }
 
 .navbar ul li::after {
